Added graph containers

--- a/HACC-AP/analytics/clean-energy.html
+++ b/HACC-AP/analytics/clean-energy.html
@@ -145,7 +145,7 @@
             </li>
           </ul>
         </nav>
-
+		  <div id="graph-container" class="graph"></div>
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
           <h1>Dashboard</h1>
 		<h1>CLEAN ENERGY TRANSFORMATION</h1>
