--- a/HACC-AP/analytics/resource-management.html
+++ b/HACC-AP/analytics/resource-management.html
@@ -163,7 +163,10 @@
 			<script language="JavaScript">
 				var gauge1 = loadLiquidFillGauge("fillgauge1", 50);
 				var config1 = liquidFillGaugeDefaultSettings();
-
+				config1.textVertPosition = 0.8;
+				config1.waveAnimateTime = 2000;
+				config1.waveHeight = 0.1;
+				config1.waveCount = 1;
 				function NewValue(){
 					if(Math.random() > .5){
 						return Math.round(Math.random()*100);
