Changed graph on energy page

--- a/HACC-AP/analytics/clean-energy.html
+++ b/HACC-AP/analytics/clean-energy.html
@@ -21,7 +21,7 @@
 		<script src="/resource/js/liquidFillGauge.js"></script>
 		
 		<script>
-			var graphID = "hawaii-renewable-portfolio-standards";
+			var graphID = "total-energy-primary";
 			
 			$(document).on("DOMContentLoaded", function (event) {
 				var jqXHR = $.get("/api/get/" + graphID, function (data) {
