Try new date format

--- a/HACC-AP/analytics/clean-energy.html
+++ b/HACC-AP/analytics/clean-energy.html
@@ -27,6 +27,10 @@
 				var jqXHR = $.get("/api/get/" + graphID, function (data) {
 					var graphData = JSON.parse(data);
 					
+					for (var i = 0; i < graphData.data.length; i++) {
+						graphData.data[i].x = new Date(graphData.data[i]["date"]);
+					}
+					
 					var chart = Highcharts.stockChart("graph-container", {
 						credits: false,
 						rangeSelector: {
@@ -52,12 +56,12 @@
 									return this.value; // clean, unformatted number for year
 								}
 							},
-							plotLines: [{
-								color: 'red', // Color value
-								dashStyle: 'longdashdot', // Style of the plot line. Default to solid
-								value: 1980, // Value of where the line will appear
-								width: 2 // Width of the line
-							}]
+//							plotLines: [{
+//								color: 'red', // Color value
+//								dashStyle: 'longdashdot', // Style of the plot line. Default to solid
+//								value: 1980, // Value of where the line will appear
+//								width: 2 // Width of the line
+//							}]
 						},
 						yAxis: {
 							title: {
