Change chart range selector

--- a/HACC-AP/analytics/clean-energy.html
+++ b/HACC-AP/analytics/clean-energy.html
@@ -33,9 +33,9 @@
 					
 					var chart = Highcharts.stockChart("graph-container", {
 						credits: false,
-						rangeSelector: {
-							selected: 8
-						},
+//						rangeSelector: {
+//							selected: 2
+//						},
 						chart: {
 							type: 'areaspline',
 							zoomType: "x"
