Print correct date in tooltips

--- a/HACC-AP/analytics/clean-energy.html
+++ b/HACC-AP/analytics/clean-energy.html
@@ -74,7 +74,7 @@
 							}
 						},
 						tooltip: {
-							pointFormat: 'Hawaii consumed <b>{point.y:,.0f}</b><br/>units petroleum in {point.x}'
+							pointFormat: 'Hawaii consumed <b>{point.y:,.0f}</b><br/>units of petroleum in ' + new Date('{point.x}')
 						},
 						plotOptions: {
 							area: {
