--- a/HACC-AP/analytics/waste-reduction.html
+++ b/HACC-AP/analytics/waste-reduction.html
@@ -147,17 +147,22 @@
 				</nav>
 				<div id="graph-container" class="graph"></div>
 				<main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-					<h1>WASTE ENERGY TRANSFORMATION GOAL DESCRIPTION: </h1>
-					<p>The U.S. Environmental Protection Agency’s (EPA) Definition of Reuse: The recovery or reapplication of a package, used product, or material in a manner that retains its original form or identity Reuse is one of the three “R’s” of Solid Waste Reduction (Reduce, Reuse and Recycle). Reuse of materials is a key strategy in meeting the Aloha+ Challenge Waste Target.
-						The Reuse goal for the Dashboard is not yet specified because of data gaps. Hawaii’s counties currently do not measure this activity because it is not regulated or managed through government operations. Most Reuse happens in the private sector with businesses, non-profits, church groups and through community events. The statewide Dashboard Team will continue to work on addressing these gaps and share information as it becomes available.
-						EPA says that the most effective way to reduce waste is to not create it in the first place. Making a new product requires a lot of materials and energy: raw materials must be extracted from the earth, and the product must be fabricated and then transported to wherever it will be sold. As a result, reduction and reuse are the most effective ways you can save natural resources, protect the environment, and save money.
-						Why Reuse?
-						One of the best ways to live zero waste is to Reuse. Reuse means using things multiple times, buying gently used items, repairing rather than buying new, donating to charities and community groups, or re-selling items.
+					<h1>WASTE ENERGY TRANSFORMATION GOAL</h1>
+					<br />
+					<h3>What Does It Mean To Reuse?</h3>
+					<p> According to the U.S. Environmental Protection Agency’s (EPA), 'REUSE' is the recovery or reapplication of a package, used product, or material in a manner that retains its original form or identity Reuse is one of the three “R’s” of Solid Waste Reduction (Reduce, Reuse and Recycle). Reuse of materials is a key strategy in meeting the Aloha+ Challenge Waste Target.</p>
+					<h3>Why Reuse</h3>
+					<p> One of the best ways to live zero waste is to Reuse. Reuse means using things multiple times, buying gently used items, repairing rather than buying new, donating to charities and community groups, or re-selling items.
 						These actions prevent solid waste from entering the landfill, allow our communities to flourish and make our islands a better place to live. Just by taking useful products discarded by those who no longer want them and providing them to those who do helps more citizens on our islands. In many cases, reuse supports local community and social programs while providing donors with tax benefits and reduced disposal fees.
-						Replacing single-use items with reusable goods whenever possible is even better than recycling because the item does not need to be reprocessed before it can be used again.
-						Reuse in Hawaii
-						Hawaii has many organizations involved in Reuse including Goodwill Industries, Salvation Army, Habitat for Humanity and many more. Cooperative agreements with large retailers like Target Stores or Home Depot provide a “second life” to many products that would otherwise end up in our landfills.
-					</p>
+						Replacing single-use items with reusable goods whenever possible is even better than recycling because the item does not need to be reprocessed before it can be used again. </p>
+					<h3>Reuse in Hawaii</h3>
+					<p> Hawaii has many organizations involved in Reuse including Goodwill Industries, Salvation Army, Habitat for Humanity and many more. Cooperative agreements with large retailers like Target Stores or Home Depot provide a “second life” to many products that would otherwise end up in our landfills. </p>
+					<h3> Goal </h3>
+					<p>The Reuse goal for the Dashboard is not yet specified because of data gaps. Hawaii’s counties currently do not measure this activity because it is not regulated or managed through government operations. Most Reuse happens in the private sector with businesses, non-profits, church groups and through community events. The statewide Dashboard Team will continue to work on addressing these gaps and share information as it becomes available. </p>
+					<br />
+					<p>EPA says that the most effective way to reduce waste is to not create it in the first place. Making a new product requires a lot of materials and energy: raw materials must be extracted from the earth, and the product must be fabricated and then transported to wherever it will be sold. As a result, reduction and reuse are the most effective ways you can save natural resources, protect the environment, and save money.</p>
+					<br />	
+
 					<h3>Waste Reduction</h3>
 			<svg id="fillgauge1" width="19%" height="200" onclick="gauge1.update(NewValue());"></svg>
 
