--- a/HACC-AP/analytics/clean-energy.html
+++ b/HACC-AP/analytics/clean-energy.html
@@ -206,6 +206,9 @@
 				var gauge2= loadLiquidFillGauge("fillgauge2", 20, config2);
 				d3.select("svg#fillgauge1").append("line")
 					.attr("x1",d3.select("svg g").attr("width"));
+					.attr("y1",d3.select("svg g").attr("width"));
+					.attr("x2",d3.select("svg g").attr("width") + 50);
+					.attr("x2",d3.select("svg g").attr("width") + 50);
 				<!-- var gauge3 = loadLiquidFillGauge("fillgauge3", 60.1, config2); -->
 				<!-- var config3 = liquidFillGaugeDefaultSettings(); -->
 				<!-- config3.textVertPosition = 0.8; -->
