--- a/HACC-AP/analytics/waste-reduction.html
+++ b/HACC-AP/analytics/waste-reduction.html
@@ -147,7 +147,7 @@
 				</nav>
 				<div id="graph-container" class="graph"></div>
 				<main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-					<h1>WASTE ENERGY TRANSFORMATION GOAL</h1>
+					<h1>WASTE ENERGY TRANSFORMATION</h1>
 					<br />
 					<h3>What Does It Mean To Reuse?</h3>
 					<p> According to the U.S. Environmental Protection Agency’s (EPA), 'REUSE' is the recovery or reapplication of a package, used product, or material in a manner that retains its original form or identity Reuse is one of the three “R’s” of Solid Waste Reduction (Reduce, Reuse and Recycle). Reuse of materials is a key strategy in meeting the Aloha+ Challenge Waste Target.</p>
