--- a/HACC-AP/analytics/local-food.html
+++ b/HACC-AP/analytics/local-food.html
@@ -71,9 +71,11 @@
         </nav>
 
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-          <h1>Dashboard</h1>
-                        <h1>LOCAL FOOD PRODUCTION AND CONSUMPTION</h1>
-                        <p>This goal is tracking fuel use in ground transportation as established in the Hawaii Clean Energy Initiative, however marine and air transportation also play a critical role in determining the sustainability of Hawaii's transportation future. As progress is made on setting specific target levels for fuel use in the marine and air transportation sectors, updates can be incorporated to this goal as appropriate..</p>
+           <h1>LOCAL FOOD PRODUCTION AND CONSUMPTION</h1>
+           <br />
+           <h3>Description</h3>
+            <p>This goal is tracking fuel use in ground transportation as established in the Hawaii Clean Energy Initiative, however marine and air transportation also play a critical role in determining the sustainability of Hawaii's transportation future. As progress is made on setting specific target levels for fuel use in the marine and air transportation sectors, updates can be incorporated to this goal as appropriate..</p>
+            <br />
 			<h3>Food Production</h3>
 			<svg id="fillgauge1" width="19%" height="200" onclick="gauge1.update(NewValue());"></svg>
 
