Fixed x-axis labels on waste graph

--- a/HACC-AP/analytics/resource-management.html
+++ b/HACC-AP/analytics/resource-management.html
@@ -50,18 +50,7 @@
 							title: {
 								text: graphData.x_label
 							},
-							allowDecimals: false,
-							labels: {
-								formatter: function () {
-									return this.value; // clean, unformatted number for year
-								}
-							},
-							plotLines: [{
-								color: 'red', // Color value
-								dashStyle: 'longdashdot', // Style of the plot line. Default to solid
-								value: 1980, // Value of where the line will appear
-								width: 2 // Width of the line
-							}]
+							allowDecimals: false
 						},
 						yAxis: {
 							title: {
