--- a/HACC-AP/analytics/waste-reduction.html
+++ b/HACC-AP/analytics/waste-reduction.html
@@ -71,7 +71,7 @@
 							pointFormatter: function () {
 								var date = new Date(this.x);
 								
-								return "Hawaii reduced solid waste by <b>" + (this.y * 100) + "%</b> " + date.getFullYear()
+								return "Hawaii reduced solid waste by <b>" + (this.y * 100) + "%</b> in " + date.getFullYear()
 							}
 						},
 						series: [{
