--- a/HACC-AP/analytics/resource-management.html
+++ b/HACC-AP/analytics/resource-management.html
@@ -141,22 +141,20 @@
         </nav>
 		  <div id="graph-container" class="graph"></div>
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
-          <h1>Dashboard</h1>
-                        <h1>NATURAL RESOURCE MANAGEMENT</h1>
-                        <p>Preventing invasive species from entering our communities and ecosystems will require a coordinated statewide effort. The Hawaii Invasive Species Council (HISC), an inter-departmental collaboration, currently manages invasive species risk in Hawaii. More resources and centralized coordination are needed for HISC to effectively control and protect Hawaii from the overwhelming threat of invasive species. In coordination with stakeholders, HISC is currently in the process of developing a Hawaii Statewide Biosecurity Plan that will form a comprehensive statewide strategy to address pre-border, border and post- border biosecurity needs.
+         <h1>NATURAL RESOURCE MANAGEMENT</h1>
+         <br />
+         <h3>Description</h3>
+         <p>Preventing invasive species from entering our communities and ecosystems will require a coordinated statewide effort. The Hawaii Invasive Species Council (HISC), an inter-departmental collaboration, currently manages invasive species risk in Hawaii. More resources and centralized coordination are needed for HISC to effectively control and protect Hawaii from the overwhelming threat of invasive species. In coordination with stakeholders, HISC is currently in the process of developing a Hawaii Statewide Biosecurity Plan that will form a comprehensive statewide strategy to address pre-border, border and post- border biosecurity needs.</p>
 
-*Invasive species are an alien species whose introduction causes or is likely to cause economic or environmental harm or harm to human health (President Clinton Exec. Order 13112). Invasive species include plants, vertebrates, invertebrates, and pathogens.</p>
+<p>*Invasive species are an alien species whose introduction causes or is likely to cause economic or environmental harm or harm to human health (President Clinton Exec. Order 13112). Invasive species include plants, vertebrates, invertebrates, and pathogens.</p>
+<br />
 			<h3>Water Usage</h3>
 			<svg id="fillgauge1" width="15%" height="200" onclick="gauge1.update(NewValue());"></svg>
 
 			<script language="JavaScript">
+				var gauge1 = loadLiquidFillGauge("fillgauge1", 50);
 				var config1 = liquidFillGaugeDefaultSettings();
-				config1.textVertPosition = 0.8;
-				config1.waveAnimateTime = 2000;
-				config1.waveHeight = 0.1;
-				config1.waveCount = 1;
-				var gauge1 = loadLiquidFillGauge("fillgauge1", 50, config1);
-				
+
 				function NewValue(){
 					if(Math.random() > .5){
 						return Math.round(Math.random()*100);
